# ktl

./: .clang-format  CMakeLists.txt  README.md  config.cmake.in  ktl_version.hpp.in
include/ktl/: async.hpp  async_queue.hpp  byte_array.hpp  debug_trap.hpp  delegate.hpp  either.hpp  enumerate.hpp  erased_semantics.hpp  expected.hpp  fifo_map.hpp  fixed_any.hpp  fixed_pimpl.hpp  fixed_vector.hpp  future.hpp  hash_table.hpp  kformat.hpp  koverloaded.hpp  kthread.hpp  kunique_ptr.hpp  kvariant.hpp  kversion.hpp  monotonic_map.hpp  move_only_function.hpp  n_tree.hpp  not_null.hpp  result.hpp  ring_buffer.hpp  ring_counter.hpp  shared_tmutex.hpp  stack_string.hpp  str_format.hpp  str_formatter.hpp  tagged_store.hpp  tmutex.hpp  unique_val.hpp
include/ktl/async/: async_queue.hpp  kasync.hpp  kfunction.hpp  kfuture.hpp  kmutex.hpp  kthread.hpp  shared_kmutex.hpp
include/ktl/enum_flags/: bitflags.hpp  enum_flags.hpp  enum_flags_crtp.hpp  enum_traits.hpp  enumerate_enum.hpp  uint_flags.hpp
